Update and rename README.md to README

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-# internet-lockdown-of-he-netherlands
+--------------------------------------------
+| the-internet-lockdown-of-the-netherlands |
+--------------------------------------------
 
 # inspector gadget
 https://en.wikipedia.org/wiki/Inspector_Gadget
