--- a/README
+++ b/README
@@ -1,6 +1,6 @@
--------------------------------
-| lockdown-of-the-netherlands |
--------------------------------
+----------------
+| the-lockdown |
+----------------
 
 
 # inspector gadget
